--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
             </intent-filter>
         </activity-->
         <activity
-            android:name=".EventoActivity"
-            android:label="@string/title_activity_evento"
+            android:name=".MainActivity"
+            android:label="MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
