--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".EventoActivity"/>
         </activity>
+        <activity
+            android:name=".actividades.TareaForm"
+            android:parentActivityName=".EventoActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".EventoActivity"/>
+        </activity>
     </application>
 
 </manifest>
