Implementa un CalculadorDePagos en base a datos mockeados Agrega funcionalidad al botón flotante del fragmento de división de pagos. Agrega atributo gasto a Tarea

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,10 +34,12 @@
             android:parentActivityName=".actividades.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
-            <!--intent-filter>
+            <!--
+            intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter-->
+            </intent-filter
+            -->
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -59,6 +61,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".actividades.EventoActivity"/>
         </activity>
+
     </application>
 
 </manifest>
