--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
@@ -69,6 +71,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".actividades.EventoActivity"/>
         </activity>
+
+        <service
+            android:name=".NotifyService"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="NOTIFICATION_SERVICE"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
